--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10440,7 +10440,10 @@ keys:
               type: str
             rcf:
               type: str
-              description: RCF function name without parenthesis.
+              description: 'RCF function name without parenthesis.
+
+                Only used if `source_protocol` is one of `connected`, `static`, `isis`,
+                `user`, `dynamic`.'
             include_leaked:
               type: bool
       vlan_aware_bundles:
@@ -11608,7 +11611,10 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: 'RCF function name without parenthesis.
+
+                    Only used if `source_protocol` is one of `connected`, `static`,
+                    `isis`, `user`, `dynamic`.'
       address_family_vpn_ipv6:
         type: dict
         keys:
@@ -11687,7 +11693,10 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: 'RCF function name without parenthesis.
+
+                    Only used if `source_protocol` is one of `connected`, `static`,
+                    `isis`, `user`, `dynamic`.'
       vrfs:
         type: list
         primary_key: name
