Corrected schemas to  support for multiple source/destination ports configuration.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
@@ -17,29 +17,31 @@ monitor telemetry postcard policy
    ingress collection gre source 10.3.3.3 destination 10.3.3.4 version 2
    ingress sample rate 16384
    ingress sample tcp-udp-checksum 2343223
-   profile profile1
-      ingress sample policy ingresspo1
-   profile profile2
-      ingress sample policy ingresspo1
    sample policy samplepo1
-      match rule rule1 ipv4
+      match rule1 ipv4
          destination prefix 10.3.3.0/24
          source prefix 3.4.5.0/24
          protocol tcp destination port www
          protocol tcp destination port 78-80
          protocol tcp destination port 77
-      match rule rule2 ipv6
-         destination prefix 10.3.4.0/24
-         source prefix 3.4.4.0/24
+      match rule2 ipv6
+         destination prefix 4::0/128
+         source prefix 5::0/128
          protocol udp destination port ssh
          protocol udp destination port 748-800
          protocol udp destination port 747
    sample policy samplepo2
-      match rule rule1 ipv4
+      match rule1 ipv4
          destination prefix 10.3.3.0/24
          source prefix 3.4.5.0/24
+         protocol udp destination port www
+         protocol udp destination port 88
          protocol udp source port www
          protocol udp source port 78-80
          protocol udp source port 77
+   profile profile1
+      ingress sample policy ingresspo1
+   profile profile2
+      ingress sample policy ingresspo1
 !
 end
