--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7637,6 +7637,7 @@ $defs:
 
               Required for MLAG leafs when `mlag_peer_address_family` is `ipv4` (default).'
             type: str
+            format: ipv4_cidr
           mlag_peer_ipv6_pool:
             documentation_options:
               table: node-type-l2-mlag-configuration
@@ -7645,6 +7646,7 @@ $defs:
 
               Required for MLAG leafs when `mlag_peer_address_family` is `ipv6`.'
             type: str
+            format: ipv6_cidr
           mlag_port_channel_id:
             documentation_options:
               table: node-type-l2-mlag-configuration
