addressing review comments

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10884,10 +10884,14 @@ keys:
                   type: bool
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
           peer_groups:
             type: list
             primary_key: name
@@ -10909,10 +10913,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 domain_remote:
                   type: bool
                 encapsulation:
@@ -11090,10 +11098,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 default_originate:
                   type: dict
                   keys:
@@ -11146,10 +11158,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11166,8 +11182,6 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
-            convert_types:
-            - dict
             items:
               type: dict
               keys:
@@ -11177,7 +11191,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -11304,10 +11320,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11334,10 +11354,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11360,7 +11384,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
       address_family_ipv6_multicast:
         type: dict
         keys:
