--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -942,10 +942,14 @@ keys:
                   type: bool
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: |-
+                    Inbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: |-
+                    Outbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
           peer_groups:
             type: list
             primary_key: name
@@ -967,10 +971,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: |-
+                    Inbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: |-
+                    Outbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 domain_remote:
                   type: bool
                 encapsulation:
@@ -1147,10 +1155,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: |-
+                    Inbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: |-
+                    Outbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 default_originate:
                   type: dict
                   keys:
@@ -1203,10 +1215,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: |-
+                    Inbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: |-
+                    Outbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -1223,8 +1239,6 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
-            convert_types:
-              - dict
             items:
               type: dict
               keys:
@@ -1234,7 +1248,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: |-
+                    RCF function name with parenthesis.
+                    Example: MyFunction(myarg).
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -1361,10 +1377,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: |-
+                    Inbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: |-
+                    Outbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -1391,10 +1411,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: |-
+                    Inbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: |-
+                    Outbound rcf function name with parenthesis.
+                    Example: MyFunction(myarg).
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -1417,7 +1441,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: |-
+                    RCF function name with parenthesis.
+                    Example: MyFunction(myarg).
       address_family_ipv6_multicast:
         type: dict
         keys:
