--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vpn-ipv4-vpn-ipv6.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vpn-ipv4-vpn-ipv6.yml
@@ -37,23 +37,23 @@ router_bgp:
         route_map_in: RM-IBGP-PEER-IN4
         route_map_out: RM-IBGP-PEER-OUT4
       - name: Test_RCF
-        rcf_in: Address_Family_VPN_IPV4_In
-        rcf_out: Address_Family_VPN_IPV4_Out
+        rcf_in: Address_Family_VPN_IPV4_In()
+        rcf_out: Address_Family_VPN_IPV4_Out()
     neighbors:
       - ip_address: 192.168.255.4
         activate: true
         route_map_in: RM-NEIGHBOR-PEER-IN4
         route_map_out: RM-NEIGHBOR-PEER-OUT4
       - ip_address: 192.168.255.5
-        rcf_in: Address_Family_VPN_IPV4_In
-        rcf_out: Address_Family_VPN_IPV4_Out
+        rcf_in: Address_Family_VPN_IPV4_In()
+        rcf_out: Address_Family_VPN_IPV4_Out()
     neighbor_default_encapsulation_mpls_next_hop_self:
       source_interface: Loopback0
     redistribute_routes:
       - source_protocol: connected
-        rcf: Address-Family_VPN_IPV4_Connected
+        rcf: Address-Family_VPN_IPV4_Connected()
       - source_protocol: static
-        rcf: Address-Family_VPN_IPV4_Static
+        rcf: Address-Family_VPN_IPV4_Static()
   address_family_vpn_ipv6:
     domain_identifier: "65000:0"
     route:
@@ -64,20 +64,20 @@ router_bgp:
         route_map_in: RM-IBGP-PEER-IN6
         route_map_out: RM-IBGP-PEER-OUT6
       - name: Test_RCF
-        rcf_in: Address_Family_VPN_IPV6_In
-        rcf_out: Address_Family_VPN_IPV6_Out
+        rcf_in: Address_Family_VPN_IPV6_In()
+        rcf_out: Address_Family_VPN_IPV6_Out()
     neighbors:
       - ip_address: 2001:cafe:192:168::4
         activate: true
         route_map_in: RM-NEIGHBOR-PEER-IN6
         route_map_out: RM-NEIGHBOR-PEER-OUT6
       - ip_address: 2001:cafe:192:168::5
-        rcf_in: Address_Family_VPN_IPV6_In
-        rcf_out: Address_Family_VPN_IPV6_Out
+        rcf_in: Address_Family_VPN_IPV6_In()
+        rcf_out: Address_Family_VPN_IPV6_Out()
     neighbor_default_encapsulation_mpls_next_hop_self:
       source_interface: Loopback0
     redistribute_routes:
       - source_protocol: connected
-        rcf: Address-Family_VPN_IPV4_Connected
+        rcf: Address-Family_VPN_IPV4_Connected()
       - source_protocol: dynamic
-        rcf: Address-Family_VPN_IPV4_Dynamic
+        rcf: Address-Family_VPN_IPV4_Dynamic()
