--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10440,7 +10440,9 @@ keys:
               type: str
             rcf:
               type: str
-              description: 'RCF function name without parenthesis.
+              description: 'RCF function name with parenthesis.
+
+                Example: MyFunction(myarg).
 
                 Only used if `source_protocol` is one of `connected`, `static`, `isis`,
                 `user`, `dynamic`.'
@@ -11559,10 +11561,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
           route:
             type: dict
             keys:
@@ -11590,10 +11596,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
           neighbor_default_encapsulation_mpls_next_hop_self:
             type: dict
             keys:
@@ -11611,7 +11621,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: 'RCF function name without parenthesis.
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).
 
                     Only used if `source_protocol` is one of `connected`, `static`,
                     `isis`, `user`, `dynamic`.'
@@ -11641,10 +11653,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
           route:
             type: dict
             keys:
@@ -11672,10 +11688,14 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parenthesis.
+                  description: 'Inbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parenthesis.
+                  description: 'Outbound rcf function name with parenthesis.
+
+                    Example: MyFunction(myarg).'
           neighbor_default_encapsulation_mpls_next_hop_self:
             type: dict
             keys:
@@ -11693,7 +11713,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: 'RCF function name without parenthesis.
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).
 
                     Only used if `source_protocol` is one of `connected`, `static`,
                     `isis`, `user`, `dynamic`.'
