--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11010,7 +11010,9 @@ keys:
                   type: str
                 rcf:
                   type: str
-                  description: 'RCF function name without parenthesis.
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).
 
                     Only used if `source_protocol` is `isis`.'
       address_family_ipv4_sr_te:
@@ -11213,7 +11215,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: 'RCF function name without parenthesis.
+                  description: 'RCF function name with parenthesis.
+
+                    Example: MyFunction(myarg).
 
                     Only used if `source_protocol` is `isis`.'
       address_family_ipv6_sr_te:
@@ -11707,7 +11711,9 @@ keys:
                         type: str
                       rcf:
                         type: str
-                        description: RCF function name without parenthesis.
+                        description: 'RCF function name with parenthesis.
+
+                          Example: MyFunction(myarg).'
                 export:
                   type: list
                   primary_key: address_family
@@ -11727,7 +11733,9 @@ keys:
                         type: str
                       rcf:
                         type: str
-                        description: RCF function name without parenthesis.
+                        description: 'RCF function name with parenthesis.
+
+                          Example: MyFunction(myarg).'
             router_id:
               description: in IP address format A.B.C.D.
               type: str
@@ -12039,7 +12047,9 @@ keys:
                     type: bool
                   rcf:
                     type: str
-                    description: RCF function name without parenthesis.
+                    description: 'RCF function name with parenthesis.
+
+                      Example: MyFunction(myarg).'
             aggregate_addresses:
               type: list
               primary_key: prefix
