--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1215,7 +1215,8 @@ keys:
                 rcf:
                   type: str
                   description: |-
-                    RCF function name without parenthesis.
+                    RCF function name with parenthesis.
+                    Example: MyFunction(myarg).
                     Only used if `source_protocol` is `isis`.
       address_family_ipv4_sr_te:
         type: dict
@@ -1418,7 +1419,8 @@ keys:
                 rcf:
                   type: str
                   description: |-
-                    RCF function name without parenthesis.
+                    RCF function name with parenthesis.
+                    Example: MyFunction(myarg).
                     Only used if `source_protocol` is `isis`.
       address_family_ipv6_sr_te:
         type: dict
@@ -1911,7 +1913,9 @@ keys:
                         type: str
                       rcf:
                         type: str
-                        description: RCF function name without parenthesis.
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
                 export:
                   type: list
                   primary_key: address_family
@@ -1931,7 +1935,9 @@ keys:
                         type: str
                       rcf:
                         type: str
-                        description: RCF function name without parenthesis.
+                        description: |-
+                          RCF function name with parenthesis.
+                          Example: MyFunction(myarg).
             router_id:
               description: in IP address format A.B.C.D.
               type: str
@@ -2212,7 +2218,9 @@ keys:
                     type: bool
                   rcf:
                     type: str
-                    description: RCF function name without parenthesis.
+                    description: |-
+                      RCF function name with parenthesis.
+                      Example: MyFunction(myarg).
             aggregate_addresses:
               type: list
               primary_key: prefix
