--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/node_type_keys.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/node_type_keys.schema.yml
@@ -114,6 +114,7 @@ keys:
             - "sampled"
             - "hardware"
           description: Set the default flow tracker type.
+          default: "sampled"
         mlag_support:
           type: bool
           default: false
