--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1310,7 +1310,10 @@ $defs:
             valid_values:
               - "sampled"
               - "hardware"
-            description: Set the flow tracker type
+            description: |-
+              Set the flow tracker type.
+              Override the `default_flow_tracker_type`` set at the `node_type_key` level.
+              `default_flow_tracker_type` default value is `sampled`.
       node_groups:
         type: list
         description: Define variables related to all nodes part of this group.
