--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
@@ -12,6 +12,14 @@ interface Management1
    vrf MGMT
    ip address 10.73.255.122/24
 !
+policy-map type copp copp-system-policy
+   class a_class
+      shape pps 3000
+   class cls1
+      shape pps 1000
+   class cls2
+      shape pps 2000
+!
 policy-map type pbr PM_PBR_BREAKOUT
    class CM_PBR_EXCLUDE
    !
