--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7896,6 +7896,25 @@ keys:
                         - mbytes
                         - packets
                         default: bytes
+      copp:
+        type: dict
+        keys:
+          name:
+            type: str
+            description: Name of control-plane poilcy.
+          classes:
+            type: list
+            primary_key: name
+            items:
+              type: dict
+              keys:
+                name:
+                  type: str
+                shape:
+                  type: int
+                  description: Shape value in pps.
+                  convert_types:
+                  - str
   port_channel_interfaces:
     type: list
     primary_key: name
