Addressing review comments and adding isis to l3_edge/core_interfaces module

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/core-1-isis-sr-ldp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/core-1-isis-sr-ldp.cfg
@@ -188,6 +188,7 @@ interface ethernet22
    no switchport
    ip address 172.16.0.0/31
    mpls ip
+   isis enable CORE
 !
 interface ethernet23
    description P2P_LINK_TO_peer4_ethernet23
@@ -196,6 +197,7 @@ interface ethernet23
    no switchport
    ip address 172.16.0.2/31
    mpls ip
+   isis enable CORE
 !
 interface ethernet24
    description P2P_LINK_TO_peer5_ethernet22
@@ -204,6 +206,7 @@ interface ethernet24
    no switchport
    ip address 172.16.1.1/29
    mpls ip
+   isis enable CORE
 !
 interface ethernet25
    description P2P_LINK_TO_peer6_ethernet23
@@ -212,6 +215,7 @@ interface ethernet25
    no switchport
    ip address 172.16.1.9/29
    mpls ip
+   isis enable CORE
 !
 interface Loopback0
    description LSR_Router_ID
