--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3834,6 +3834,7 @@ keys:
       table: isis-settings
     type: bool
     default: false
+    description: Enable BFD for ISIS on all underlay links.
   underlay_isis_instance_name:
     documentation_options:
       table: isis-settings
