--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
@@ -265,6 +265,7 @@ ethernet_interfaces:
   ip_address: 172.16.0.0/31
   mpls:
     ip: true
+  isis_enable: CORE
 - name: ethernet23
   peer: peer4
   peer_interface: ethernet23
@@ -276,6 +277,7 @@ ethernet_interfaces:
   ip_address: 172.16.0.2/31
   mpls:
     ip: true
+  isis_enable: CORE
 - name: ethernet24
   peer: peer5
   peer_interface: ethernet22
@@ -287,6 +289,7 @@ ethernet_interfaces:
   ip_address: 172.16.1.1/29
   mpls:
     ip: true
+  isis_enable: CORE
 - name: ethernet25
   peer: peer6
   peer_interface: ethernet23
@@ -298,6 +301,7 @@ ethernet_interfaces:
   ip_address: 172.16.1.9/29
   mpls:
     ip: true
+  isis_enable: CORE
 port_channel_interfaces:
 - name: Port-Channel12
   peer: core-2-ospf-ldp
