--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -111,7 +111,7 @@ router_bgp:
       export_ethernet_segment_ip_mass_withdraw: true
       import_overlay_index_gateway: true
     bgp_additional_paths:
-      receive: True
+      receive: true
       send:
         any: true
   address_family_ipv4:
