--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
@@ -180,6 +180,20 @@ anta.tests.ptp:
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
+    - afi: evpn
+      peers:
+      - 10.255.255.10
+    result_overwrite:
+      custom_field: 'BGP EVPN Peer: dc1-leaf1a (IP: 10.255.255.10)'
+- VerifyBGPSpecificPeers:
+    address_families:
+    - afi: evpn
+      peers:
+      - 10.255.255.20
+    result_overwrite:
+      custom_field: 'BGP EVPN Peer: dc1-leaf1b (IP: 10.255.255.20)'
+- VerifyBGPSpecificPeers:
+    address_families:
     - afi: ipv4
       peers:
       - 10.255.255.4
@@ -317,6 +331,18 @@ anta.tests.software:
     - v1.13.6
     - v1.8.0
 anta.tests.stun:
+- VerifyStunClient:
+    result_overwrite:
+      custom_field: 'source address: 172.18.4.2 source port: 4500'
+    stun_clients:
+    - source_address: 172.18.4.2
+      source_port: 4500
+- VerifyStunClient:
+    result_overwrite:
+      custom_field: 'source address: 100.64.4.2 source port: 4500'
+    stun_clients:
+    - source_address: 100.64.4.2
+      source_port: 4500
 - VerifyStunClient:
     stun_clients:
     - public_address: 172.18.3.21
