--- a/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/WAN.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/WAN.yml
@@ -28,3 +28,27 @@ wan_carriers:
   - name: mpls-sp-1
     path_group: mpls
     trusted: true
+
+wan_route_servers:
+  - hostname: dc1-leaf1a
+    vtep_ip: 10.255.255.10
+    path_groups:
+      - name: mpls
+        interfaces:
+          - name: Ethernet6
+            public_ip: 172.18.1.2
+      - name: internet
+        interfaces:
+          - name: Ethernet7
+            public_ip: 100.64.1.2
+  - hostname: dc1-leaf1b
+    vtep_ip: 10.255.255.20
+    path_groups:
+      - name: mpls
+        interfaces:
+          - name: Ethernet6
+            public_ip: 172.18.2.2
+      - name: internet
+        interfaces:
+          - name: Ethernet7
+            public_ip: 100.64.2.2
