Addressing review comments

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3330,7 +3330,7 @@ keys:
           keys:
             condition:
               type: str
-              description: Set the counters condition expression.
+              description: Set the logical expression to evaluate.
             granularity_per_source:
               type: bool
               description: "Set the granularity of event counting for a wildcarded
@@ -3339,6 +3339,10 @@ keys:
                 here]"
             poll_interval:
               type: int
+              convert_types:
+              - str
+              min: 1
+              max: 1000000
               description: Set the polling interval in seconds.
         trigger_on_logging:
           type: dict
@@ -3347,12 +3351,18 @@ keys:
               type: int
               convert_types:
               - str
+              min: 1
+              max: 1000000
               description: Set the polling interval in seconds.
             regex:
               type: str
               description: Regular expression to use for searching log messages.
         trigger_on_intf:
           type: dict
+          description: 'Trigger condition occurs on specified interface changes.
+
+            Note: Any one of the `ip`, `ip6` and `operstatus` key needs to be defined
+            with the `interface`'
           keys:
             interface:
               type: str
